--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ python:
   - "3.3"
   - "3.4"
 install:
-  - "pip install -r requirements.txt"
+  - "pip install ."
 script: py.test src/geventhttpclient/tests
