--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "2.6"
   - "2.7"
+  - "pypy"
 install:
   - "pip install ."
 script: py.test src/geventhttpclient/tests
