--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,41 @@ python:
 install:
   - "pip install ."
 script: py.test src/geventhttpclient/tests
+
+jobs:
+  include:
+    - stage: build
+      sudo: required
+      services:
+        - docker
+      os: linux
+      python: "3.6"
+      install:
+        - pip install cibuildwheel==0.6.0
+      script:
+        - cibuildwheel --output-dir wheelhouse
+        # Upload to PyPI on tags
+        - if [ "${TRAVIS_TAG:-}" != "" ]; then
+            pip install twine;
+            python -m twine upload --skip-existing wheelhouse/*;
+          fi
+    - stage: build
+      sudo: required
+      os: osx
+      osx_image: xcode8.3
+      language: null
+      python: null
+      install:
+        # Python 3 is needed to run cibuildwheel
+        - if [ "${TRAVIS_OS_NAME:-}" == "osx" ]; then
+            brew update;
+            brew install python3;
+          fi
+        - pip3 install cibuildwheel==0.6.0
+      script:
+        - cibuildwheel --output-dir wheelhouse
+        # Upload to PyPI on tags
+        - if [ "${TRAVIS_TAG:-}" != "" ]; then
+            pip3 install twine;
+            python3 -m twine upload --skip-existing wheelhouse/*;
+          fi
