--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ jobs:
         - cibuildwheel --output-dir wheelhouse
         # Upload to PyPI on tags
         - if [ "${TRAVIS_TAG:-}" != "" ]; then
-            pip3 install twine;
-            python3 -m twine upload --skip-existing wheelhouse/*;
+            pip install twine;
+            python -m twine upload --skip-existing wheelhouse/*;
           fi
     - stage: build
       sudo: required
