--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,10 @@
 [tox]
-envlist = py26,py27,py34,py35,py36
+envlist = py{27,35,36}
 [testenv]
+whitelist_externals =
+    rm
+    find
+    py.test
 deps=-rrequirements-dev.txt
 commands=
     rm -rf build
