--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
       os: linux
       python: "3.6"
       install:
-        - pip install cibuildwheel==0.6.0
+        - pip install cibuildwheel==0.8.0
       script:
         - cibuildwheel --output-dir wheelhouse
         # Upload to PyPI on tags
@@ -26,6 +26,8 @@ jobs:
             pip install twine;
             python -m twine upload --skip-existing wheelhouse/*;
           fi
+      env:
+        - CIBW_SKIP=cp33
     - stage: build
       sudo: required
       os: osx
@@ -38,7 +40,7 @@ jobs:
             brew update;
             brew install python3;
           fi
-        - pip3 install cibuildwheel==0.6.0
+        - pip3 install cibuildwheel==0.8.0
       script:
         - cibuildwheel --output-dir wheelhouse
         # Upload to PyPI on tags
@@ -46,3 +48,5 @@ jobs:
             pip3 install twine;
             python3 -m twine upload --skip-existing wheelhouse/*;
           fi
+      env:
+        - CIBW_SKIP=cp33
