--- a/.travis.yml
+++ b/.travis.yml
@@ -38,15 +38,15 @@ jobs:
         # Python 3 is needed to run cibuildwheel
         - if [ "${TRAVIS_OS_NAME:-}" == "osx" ]; then
             brew update;
-            brew install python3;
+            brew upgrade python;
           fi
-        - pip3 install cibuildwheel==0.8.0
+        - pip install cibuildwheel==0.8.0
       script:
         - cibuildwheel --output-dir wheelhouse
         # Upload to PyPI on tags
         - if [ "${TRAVIS_TAG:-}" != "" ]; then
-            pip3 install twine;
-            python3 -m twine upload --skip-existing wheelhouse/*;
+            pip install twine;
+            python -m twine upload --skip-existing wheelhouse/*;
           fi
       env:
         - CIBW_SKIP=cp33
