--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.5"
   - "3.6"
 install:
-  - "pip install ."
+  - "pip install .[dev]"
 script: py.test src/geventhttpclient/tests
 
 jobs:
