mock `gevent.socket.getaddrinfo` to return 127.0.0.1 for any host

--- a/tox.ini
+++ b/tox.ini
@@ -11,4 +11,5 @@ commands=
     find . -name '*.pyc' -delete
     python setup.py clean
     python setup.py build_ext --inplace
-    py.test src/geventhttpclient/tests
+    pip install -r requirements-dev.txt
+    py.test --fulltrace src/geventhttpclient/tests
