--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,6 @@ include ext/*.h
 recursive-include src/geventhttpclient/tests *
 global-exclude __pycache__
 global-exclude *.py[co]
+include LICENSE-MIT
+include README.mdown
+include CHANGELOG
