--- a/.travis.yml
+++ b/.travis.yml
@@ -1,53 +1,57 @@
 language: python
 sudo: false
 python:
-  - "2.7"
-  - "3.5"
-  - "3.6"
-  - "3.7"
+- '2.7'
+- '3.5'
+- '3.6'
+- '3.7'
 install:
-  - "pip install -r requirements-dev.txt"
-  - "pip install ."
+- pip install -r requirements-dev.txt
+- pip install .
 script: py.test src/geventhttpclient/tests
-
 jobs:
   include:
-    - stage: build
-      sudo: required
-      services:
-        - docker
-      os: linux
-      python: "3.6"
-      install:
-        - pip install cibuildwheel==0.8.0
-      script:
-        - cibuildwheel --output-dir wheelhouse
-        # Upload to PyPI on tags
-        - if [ "${TRAVIS_TAG:-}" != "" ]; then
-            pip install twine;
-            python -m twine upload --skip-existing wheelhouse/*;
-          fi
-      env:
-        - CIBW_SKIP=cp33
-    - stage: build
-      sudo: required
-      os: osx
-      osx_image: xcode8.3
-      language: null
-      python: null
-      install:
-        # Python 3 is needed to run cibuildwheel
-        - if [ "${TRAVIS_OS_NAME:-}" == "osx" ]; then
-            brew update;
-            brew upgrade python;
-          fi
-        - pip install cibuildwheel==0.8.0
-      script:
-        - cibuildwheel --output-dir wheelhouse
-        # Upload to PyPI on tags
-        - if [ "${TRAVIS_TAG:-}" != "" ]; then
-            pip install twine;
-            python -m twine upload --skip-existing wheelhouse/*;
-          fi
-      env:
-        - CIBW_SKIP=cp33
+  - stage: build
+    sudo: required
+    services:
+    - docker
+    os: linux
+    python: '3.6'
+    install:
+    - pip install cibuildwheel==0.8.0
+    script:
+    - cibuildwheel --output-dir wheelhouse
+    - if [ "${TRAVIS_TAG:-}" != "" ]; then pip install twine; python -m twine upload
+      --skip-existing wheelhouse/*; fi
+    env:
+    - CIBW_SKIP=cp33
+  - stage: build
+    sudo: required
+    os: osx
+    osx_image: xcode8.3
+    language: 
+    python: 
+    install:
+    - if [ "${TRAVIS_OS_NAME:-}" == "osx" ]; then brew update; brew upgrade python;
+      fi
+    - pip install cibuildwheel==0.8.0
+    script:
+    - cibuildwheel --output-dir wheelhouse
+    - if [ "${TRAVIS_TAG:-}" != "" ]; then pip install twine; python -m twine upload
+      --skip-existing wheelhouse/*; fi
+    env:
+    - CIBW_SKIP=cp33
+deploy:
+  password0:
+    secure: PzCRJ9U3RZbSgHhgPDrjyzDTiT8JpF8OLI2ODMXA4QREz/Fi1iSeXprp0gQ+OEHeH3e88xHpIrK4nxxJcE56jejC0ToTEFqc20DMycV21AVd/+UJmeeUHRK6ULGEVp4R5AqkmRdAG059RJu519gOQBvY5LWb0N61o2ZkVw8uJmI=
+  password1:
+    secure: TKTsO49APvmPHa8Ex0SMzWuGsTZHDX+/ozBLEVTl3ImYNRk+4bvZIpOD4wCrpoqE/Mn2oYm14RaxPLpPZ6CUcggwCagzEkuJvV501gqiLs+Z04/+TQvM/v+MyuZqzikSHi2OKuDPPCAJ5/m9yW6DHyjSQJLQBtQmlj2GcWSM14E=
+  password2:
+    secure: CYeIqItHVMmXWTNcpKOflApNYEvy6CIJO9IyRuIIBipZ6Sj9eN/EG023/r2FxBIbe/aJ6L+OLrFK5VF9TGI7+v+NORVleSpmCBfneSnKX+JxOnL3xj2oyaQ9LQRrTjXptS/2oO4cQzlRFXGk/coar1xE3lz6wE6IQF1kDpMsQXM=
+  provider: pypi
+    user: __token__
+    password: $PASSWORD0$PASSWORD1$PASSWORD2
+    distributions: sdist
+  on:
+    tags: true
+
