--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,9 +4,8 @@ build_script:
   - python -m pip install --upgrade pip
   - pip install cibuildwheel==1.3.0
   - cibuildwheel --output-dir wheelhouse
-  - ps: >-
-      python -m pip install twine
-      python -m twine upload --skip-existing (resolve-path wheelhouse\*.whl)
+  - ps: python -m pip install twine
+  - ps: python -m twine upload --skip-existing (resolve-path wheelhouse\*.whl)
 artifacts:
   - path: "wheelhouse\\*.whl"
     name: Wheels
