--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,10 @@ jobs:
     script:
     - cibuildwheel --output-dir wheelhouse
     - python setup.py sdist -d wheelhouse
-    - if [ "${TRAVIS_TAG:-}" != "" ]; then pip install twine; python -m twine upload
-      --skip-existing wheelhouse/*; fi
+    - if [ "${TRAVIS_TAG:-}" != "" ]; then 
+        pip install twine; 
+        python -m twine upload --skip-existing wheelhouse/*;
+      fi
     env:
       - CIBW_SKIP="cp33 cp34"
   - stage: build
