--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -36,22 +36,21 @@ jobs:
         run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
       - run: pip install -r requirements-dev.txt
       - run: pip install .
-      - run: pip install cibuildwheel==1.3.0
       - run: py.test src/geventhttpclient/tests
   
   release:
-    name: Release to PyPI
+    name: Build wheels, upload to PyPI if tagged
     needs: tests
-    if: startsWith(github.event.ref, 'refs/tags')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+        run: pip install cibuildwheel==2.0.0b2 && python -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_SKIP: "cp33 cp34"
 
       - uses: actions/upload-artifact@v2
+        if: startsWith(github.event.ref, 'refs/tags')
         with:
           path: ./wheelhouse/*.whl
           user: __token__
