--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -40,18 +40,21 @@ jobs:
         if:  ${{ matrix.os != 'windows-latest'}} # skip tests on windows because they are hanging
   
   release:
-    name: Build wheels, upload to PyPI if tagged
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, windows-2019, macOS-10.15]
     needs: tests
-    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build wheels
-        run: pip install cibuildwheel==2.1.1 && python -m cibuildwheel --output-dir wheelhouse
+      - uses: actions/setup-python@v2
+      - run: python -m pip install cibuildwheel==2.1.1
+      - run: python -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_SKIP: "cp33 cp34 cp27-*"
           CIBW_ARCHS_MACOS: "x86_64 universal2 arm64"
           CIBW_ARCHS_LINUX: "auto aarch64"
-
       - uses: actions/upload-artifact@v2
         if: startsWith(github.event.ref, 'refs/tags')
         with:
