--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -50,14 +50,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: python -m pip install cibuildwheel==2.1.1
-      - run: python -m cibuildwheel --output-dir wheelhouse
+      - run: python -m cibuildwheel --output-dir dist
         env:
           CIBW_SKIP: "cp33 cp34 cp27-*"
           CIBW_ARCHS_MACOS: "x86_64 universal2 arm64"
           CIBW_ARCHS_LINUX: "auto aarch64"
-      - uses: actions/upload-artifact@v2
+      - uses: pypa/gh-action-pypi-publish@release/v1
         if: startsWith(github.event.ref, 'refs/tags')
         with:
-          path: ./wheelhouse/*.whl
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
+          skip_existing: true
