--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,7 @@ jobs:
           path: wheelhouse/*.whl
   publish:
     runs-on: ubuntu-20.04
+    needs: build
     steps:
       - uses: actions/download-artifact@v2
         with:
