--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,13 +25,13 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           path: wheelhouse/*.whl
+          if-no-files-found: error
   publish:
     runs-on: ubuntu-20.04
     needs: build
     steps:
       - uses: actions/download-artifact@v2
         with:
-          name: wheelhouse
           path: dist
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
