artifact, not artifacts...

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,6 +34,6 @@ jobs:
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
-          packages_dir: artifacts
+          packages_dir: artifact
           password: ${{ github.event.inputs.pypi_access_token }}
           skip_existing: true
