--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,9 +8,23 @@ on:
         required: true
 
 jobs:
+  source:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/setup-python@v2
+      - run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel
+          python setup.py sdist
+      - uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ github.event.inputs.pypi_access_token }}
+          skip_existing: true
   build:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    needs: source
     strategy:
       matrix:
         os: [ubuntu-20.04, windows-2019, macOS-10.15, macos-11]
