Run tests for 2.7 too, because why not.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
           - {name: '3.8', python: '3.8', os: ubuntu-latest, tox: py38}
           - {name: '3.7', python: '3.7', os: ubuntu-latest, tox: py37}
           - {name: '3.6', python: '3.6', os: ubuntu-latest, tox: py36}
+          - {name: '2.7', python: '2.7', os: ubuntu-latest, tox: py27}
 
     steps:
       - uses: actions/checkout@v2
