--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,8 @@ jobs:
     needs: source
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2019, macOS-10.15, macos-11]
+        continue-on-error: true 
+        os: [ubuntu-20.04, windows-2019, windows-2022, macos-10.15, macos-11, macos-12]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
