--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: docker/setup-qemu-action@v1
         if: ${{ matrix.os == 'ubuntu-20.04' }}
         name: Set up QEMU
-      - run: python -m pip install cibuildwheel==2.1.1
+      - run: python -m pip install cibuildwheel
       - run: python -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_ARCHS_MACOS: "x86_64 universal2 arm64"
