--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   source:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -24,12 +24,12 @@ jobs:
     needs: source
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2019, windows-2022, macos-11, macos-12]
+        os: [ubuntu-20.04, ubuntu-22.04, windows-2019, windows-2022, macos-11, macos-12]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - uses: docker/setup-qemu-action@v1
-        if: ${{ matrix.os == 'ubuntu-20.04' }}
+        if: ${{ matrix.os == 'ubuntu-22.04' }}
         name: Set up QEMU
       - run: python -m pip install cibuildwheel
       - run: python -m cibuildwheel --output-dir wheelhouse
@@ -41,7 +41,7 @@ jobs:
           path: wheelhouse/*.whl
           if-no-files-found: error
   publish:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs: build
     steps:
       - uses: actions/download-artifact@v2
