--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
     needs: source
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04, windows-2019, windows-2022, macos-11, macos-12]
+        os: [ubuntu-22.04, windows-2022, macos-12]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
