--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - uses: actions/setup-python@v2
       - run: |
           python -m pip install --upgrade pip
@@ -27,6 +29,8 @@ jobs:
         os: [ubuntu-22.04, windows-2022, macos-12]
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - uses: actions/setup-python@v2
       - uses: docker/setup-qemu-action@v1
         if: ${{ matrix.os == 'ubuntu-22.04' }}
