--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,7 @@
 include src/geventhttpclient/*.py
 include ext/*.c
 include ext/*.h
-include llhttp/*.h
-include llhttp/*.c
-include llhttp/LICENSE-MIT
+recursirve-include llhttp *.h *.c LICENSE-MIT
 recursive-include src/geventhttpclient/tests *
 global-exclude __pycache__
 global-exclude *.py[co]
