--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,9 +17,9 @@ jobs:
           - {name: '3.10', python: '3.10', os: ubuntu-latest, tox: py310}
           - {name: '3.9', python: '3.9', os: ubuntu-latest, tox: py39}
           - {name: '3.8', python: '3.8', os: ubuntu-latest, tox: py38}
-          - {name: '3.7', python: '3.7', os: ubuntu-latest, tox: py37}
-          - {name: '3.6', python: '3.6', os: ubuntu-latest, tox: py36}
-          - {name: '2.7', python: '2.7', os: ubuntu-latest, tox: py27}
+          - {name: '3.7', python: '3.7', os: ubuntu-20.04, tox: py37}
+          - {name: '3.6', python: '3.6', os: ubuntu-20.04, tox: py36}
+          - {name: '2.7', python: '2.7', os: ubuntu-20.04, tox: py27}
 
     steps:
       - uses: actions/checkout@v2
