Rename 3.11-dev environment to just 3.11 now that it is supported properly by github.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,35,36,37,38,39,310,311-dev}
+envlist = py{27,35,36,37,38,39,310,311}
 [testenv]
 whitelist_externals =
     rm
