git fixed string post test and added virtual_interface marker

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 markers =
   online: tests which require internet access
+  virtual_interface: tests which require a virtual eth interface
