--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
 envlist = py{27,35,36,37,38,39,310,311}
 [testenv]
-whitelist_externals =
+allowlist_externals =
     rm
     find
-    py.test
+    pytest
 deps=-rrequirements-dev.txt
 commands=
     rm -rf build
@@ -12,4 +12,4 @@ commands=
     python setup.py clean
     python setup.py build_ext --inplace
     pip install -r requirements-dev.txt
-    py.test --fulltrace src/geventhttpclient/tests
+    pytest --fulltrace src/geventhttpclient/tests
