--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,5 +40,6 @@ jobs:
       - name: set full Python version in PY env var
         # See https://pre-commit.com/#github-actions-example
         run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
+      - run: python -m pip install tox
       - run: python -m tox -e ${{ matrix.tox }}
         if:  ${{ matrix.os != 'windows-latest'}} # skip tests on windows because they are hanging
