fix tox for py37?

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,8 @@ allowlist_externals =
     rm
     find
     pytest
-deps=-rrequirements-dev.txt
+deps=
+    -r requirements-dev.txt
 commands=
     rm -rf build
     find . -name '*.pyc' -delete
