--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,14 @@
 [tox]
 envlist = py{27,35,36,37,38,39,310,311}
 [testenv]
-whitelist_externals =
+allowlist_externals =
     rm
     find
-    py.test
-deps=-rrequirements-dev.txt
+    pytest
 commands=
     rm -rf build
     find . -name '*.pyc' -delete
     python setup.py clean
     python setup.py build_ext --inplace
     pip install -r requirements-dev.txt
-    py.test --fulltrace src/geventhttpclient/tests
+    pytest --fulltrace src/geventhttpclient/tests
