--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,17 @@
 [tox]
 envlist = py{39,310,311,312}
+
 [testenv]
+deps =
+    pip
+    pytest
 allowlist_externals =
     rm
     find
-    pytest
 commands=
     rm -rf build
-    find . -name '*.pyc' -delete
+    # find errors for windows
+    # find . -name '*.pyc' -delete
     python setup.py clean
     python setup.py build_ext --inplace
     pip install -r requirements-dev.txt
