--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,8 +40,12 @@ optional-dependencies.benchmarks = [
     "requests",
     "httpx",
     "urllib3",
-    "httplib2"
+    "httplib2",
 ]
+optional-dependencies.examples = [
+    "oauth2",
+]
+
 
 [project.urls]
 homepage = "http://github.com/geventhttpclient/geventhttpclient"
