--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,10 +11,8 @@ jobs:
         with:
           submodules: recursive
       - uses: actions/setup-python@v5
-      - run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel
-          python setup.py sdist
+      - run: python -m pip install build
+      - run: python -m build --sdist
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
