Switch from running setup.py to python -m build in tox.ini as well

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py{39,310,311,312}
 deps =
     pip
     pytest
+    build
 allowlist_externals =
     rm
     find
@@ -12,7 +13,6 @@ commands=
     rm -rf build
     # find errors for windows
     # find . -name '*.pyc' -delete
-    python setup.py clean
-    python setup.py build_ext --inplace
+    python -m build
     pip install -r requirements-dev.txt
-    pytest --fulltrace src/geventhttpclient/tests
+    pytest src/geventhttpclient/tests
