--- a/tox.ini
+++ b/tox.ini
@@ -15,4 +15,5 @@ commands=
     # find . -name '*.pyc' -delete
     python -m build
     pip install -r requirements-dev.txt
-    pytest src/geventhttpclient/tests
+    pip install -e.
+    pytest
