Move project source back to src/geventhttpclient, making sure that the tests are run against the installed package
See discussion in https://github.com/geventhttpclient/geventhttpclient/issues/189

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,7 @@
-include geventhttpclient/*.py
+include src/geventhttpclient/*.py
 include ext/*.c
 include ext/*.h
 recursive-include llhttp *.h *.c LICENSE-MIT
-recursive-exclude tests *
 global-exclude __pycache__
 global-exclude *.py[co]
 include pyproject.toml
