Explicitly support Python 3.13 and 3.14.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {name: Windows, python: '3.11', os: windows-latest, tox: py311}
-          - {name: Mac, python: '3.11', os: macos-latest, tox: py311}
+          - {name: Windows, python: '3.13', os: windows-latest, tox: py313}
+          - {name: Mac, python: '3.13', os: macos-latest, tox: py313}
+          - {name: '3.14', python: '3.14', os: ubuntu-latest, tox: py314}
           - {name: '3.13', python: '3.13', os: ubuntu-latest, tox: py313}
           - {name: '3.12', python: '3.12', os: ubuntu-latest, tox: py312}
           - {name: '3.11', python: '3.11', os: ubuntu-latest, tox: py311}
